Lyrics support + chordpro management + bug fixing + style changes in controller view
